// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component EditRecipeForm match snapshot 2 1`] = `
<div>
  <button
    class="coral-link p-4"
    title="back"
  >
     
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorError"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-3 12.59L17.59 17 14 13.41 10.41 17 9 15.59 12.59 12 9 8.41 10.41 7 14 10.59 17.59 7 19 8.41 15.41 12 19 15.59z"
      />
    </svg>
  </button>
  <div
    class="flex justify-center items-center"
  >
    <div
      class="w-2/3 min-w-40 pb-4 pt-4"
    >
      <h1
        class="form-header font-bebas uppercase text-darkGray text-center pb-0 m-0"
      >
        Edit Recipe
      </h1>
      <form
        class="ant-form ant-form-horizontal"
        id="control-ref"
      >
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_title"
              title="Title"
            >
              Title
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  id="control-ref_title"
                  type="text"
                  value="Apple Pie"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_servings"
              title="Servings"
            >
              Servings
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-input-number"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="8"
                      autocomplete="off"
                      class="ant-input-number-input"
                      id="control-ref_servings"
                      min="-9007199254740991"
                      role="spinbutton"
                      step="1"
                      value="8"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_readyInMinutes"
              title="Ready in Min."
            >
              Ready in Min.
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-input-number"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="130"
                      autocomplete="off"
                      class="ant-input-number-input"
                      id="control-ref_readyInMinutes"
                      min="-9007199254740991"
                      role="spinbutton"
                      step="1"
                      value="130"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_ingredients"
              title="Ingredients"
            >
              Ingredients
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root mt-4 mb-4 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                      data-shrink="false"
                      for="mui-75212"
                      id="mui-75212-label"
                    >
                      Add at least one product
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="mui-75212"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_detailedIngredients"
              title="Detailed Ingredients"
            >
              Detailed Ingredients
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  type="text"
                  value=""
                />
                <button
                  class="ant-btn ant-btn-dashed"
                  disabled=""
                  type="button"
                >
                  <span>
                    Add Ingredient
                  </span>
                </button>
                <ol>
                  <li
                    class="ml-6"
                  >
                    <div
                      class="w-full flex justify-between"
                    >
                      <span
                        class="mt-1"
                      >
                        test1
                      </span>
                      <button
                        aria-label="Delete"
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_instructions"
              title="Instructions"
            >
              Instructions
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input"
                  id="control-ref_instructions"
                >
                  In a small bowl, combine the sugars, flour and spices; set aside. In a large bowl, toss apples with lemon juice. Add sugar mixture; toss to coat.
Pie plate with bottom crust; trim even with edge. Fill with apple mixture; dot with butter. Roll remaining crust to fit the top of pie; place overfilling. Trim, seal and flute edges. Cut slits in crust.
Beat egg white until foamy; brush over crust. Sprinkle with sugar. Cover edges loosely with foil.
Bake at 375° for 25 minutes. Remove foil and bake until crust is golden brown and filling is bubbly, 20-25 minutes longer. Cool on a wire rack.
                </textarea>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_image"
              title="Image"
            >
              Image
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="avatar-uploader ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select ant-upload-select-picture-card"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept=""
                        style="display: none;"
                        type="file"
                      />
                      <img
                        alt="avatar"
                        src="http://res.cloudinary.com/drgb4slzt/image/upload/v1593512714/a4ghjbymhrazfftekznz.jpg"
                        style="width: 100%;"
                      />
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class=""
              for="control-ref_sourceUrl"
              title="Source Url"
            >
              Source Url
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-input-group-wrapper"
                >
                  <span
                    class="ant-input-wrapper ant-input-group"
                  >
                    <span
                      class="ant-input-group-addon"
                    >
                      http://
                    </span>
                    <input
                      class="ant-input"
                      id="control-ref_sourceUrl"
                      type="text"
                      value="myblog.com"
                    />
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-col-12 ant-col-offset-10 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn mr-2 ant-btn-primary"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
                <button
                  class="ant-btn mr-2"
                  type="button"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`component EditRecipeForm match snapshot when clicking back button 1`] = `
<div>
  <button
    class="coral-link p-4"
    title="back"
  >
     
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorError"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-3 12.59L17.59 17 14 13.41 10.41 17 9 15.59 12.59 12 9 8.41 10.41 7 14 10.59 17.59 7 19 8.41 15.41 12 19 15.59z"
      />
    </svg>
  </button>
  <div
    class="flex justify-center items-center"
  >
    <div
      class="w-2/3 min-w-40 pb-4 pt-4"
    >
      <h1
        class="form-header font-bebas uppercase text-darkGray text-center pb-0 m-0"
      >
        Edit Recipe
      </h1>
      <form
        class="ant-form ant-form-horizontal"
        id="control-ref"
      >
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_title"
              title="Title"
            >
              Title
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  id="control-ref_title"
                  type="text"
                  value="Apple Pie"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_servings"
              title="Servings"
            >
              Servings
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-input-number"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="8"
                      autocomplete="off"
                      class="ant-input-number-input"
                      id="control-ref_servings"
                      min="-9007199254740991"
                      role="spinbutton"
                      step="1"
                      value="8"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_readyInMinutes"
              title="Ready in Min."
            >
              Ready in Min.
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-input-number"
                >
                  <div
                    class="ant-input-number-handler-wrap"
                  >
                    <span
                      aria-label="Increase Value"
                      class="ant-input-number-handler ant-input-number-handler-up"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="up"
                        class="anticon anticon-up ant-input-number-handler-up-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="up"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-label="Decrease Value"
                      class="ant-input-number-handler ant-input-number-handler-down"
                      role="button"
                      unselectable="unselectable"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-input-number-handler-down-inner"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-input-number-input-wrap"
                  >
                    <input
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="130"
                      autocomplete="off"
                      class="ant-input-number-input"
                      id="control-ref_readyInMinutes"
                      min="-9007199254740991"
                      role="spinbutton"
                      step="1"
                      value="130"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_ingredients"
              title="Ingredients"
            >
              Ingredients
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-expanded="false"
                  class="MuiAutocomplete-root mt-4 mb-4 MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                  role="combobox"
                >
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                      data-shrink="false"
                      for="mui-24307"
                      id="mui-24307-label"
                    >
                      Add at least one product
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                        id="mui-24307"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_detailedIngredients"
              title="Detailed Ingredients"
            >
              Detailed Ingredients
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  type="text"
                  value=""
                />
                <button
                  class="ant-btn ant-btn-dashed"
                  disabled=""
                  type="button"
                >
                  <span>
                    Add Ingredient
                  </span>
                </button>
                <ol>
                  <li
                    class="ml-6"
                  >
                    <div
                      class="w-full flex justify-between"
                    >
                      <span
                        class="mt-1"
                      >
                        test1
                      </span>
                      <button
                        aria-label="Delete"
                        class="MuiButtonBase-root MuiIconButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_instructions"
              title="Instructions"
            >
              Instructions
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <textarea
                  class="ant-input"
                  id="control-ref_instructions"
                >
                  In a small bowl, combine the sugars, flour and spices; set aside. In a large bowl, toss apples with lemon juice. Add sugar mixture; toss to coat.
Pie plate with bottom crust; trim even with edge. Fill with apple mixture; dot with butter. Roll remaining crust to fit the top of pie; place overfilling. Trim, seal and flute edges. Cut slits in crust.
Beat egg white until foamy; brush over crust. Sprinkle with sugar. Cover edges loosely with foil.
Bake at 375° for 25 minutes. Remove foil and bake until crust is golden brown and filling is bubbly, 20-25 minutes longer. Cool on a wire rack.
                </textarea>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="control-ref_image"
              title="Image"
            >
              Image
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="avatar-uploader ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select ant-upload-select-picture-card"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept=""
                        style="display: none;"
                        type="file"
                      />
                      <img
                        alt="avatar"
                        src="http://res.cloudinary.com/drgb4slzt/image/upload/v1593512714/a4ghjbymhrazfftekznz.jpg"
                        style="width: 100%;"
                      />
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-col ant-col-10 ant-form-item-label"
          >
            <label
              class=""
              for="control-ref_sourceUrl"
              title="Source Url"
            >
              Source Url
            </label>
          </div>
          <div
            class="ant-col ant-col-20 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-input-group-wrapper"
                >
                  <span
                    class="ant-input-wrapper ant-input-group"
                  >
                    <span
                      class="ant-input-group-addon"
                    >
                      http://
                    </span>
                    <input
                      class="ant-input"
                      id="control-ref_sourceUrl"
                      type="text"
                      value="myblog.com"
                    />
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-col-12 ant-col-offset-10 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn mr-2 ant-btn-primary"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
                <button
                  class="ant-btn mr-2"
                  type="button"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
